# insig_demo-multiple-financials

./: .gitignore  CHANGELOG.md  MULTI_COMPANY_README.md  README.md  RULES_MANAGEMENT_GUIDE.md  financial_ratios.md  multiple_co.docx  phase1_analysis.md  pyproject.toml  requirements.txt  run_app.py  run_app_multi.py  start.sh  test_context_sharing.md
backend/: REFACTORING_SUMMARY.md  cleanup_redundant_files.py  main.py  main_multi.py  main_refactored.py  pdf_converter_best.py  ratio_config_manager.py  rules_manager.py
backend/api/: __init__.py  rules.py
backend/backup_old_converters/: README.md  pdf_converter.py  pdf_converter_advanced.py  pdf_converter_final.py  pdf_converter_improved.py  pdf_converter_simple.py  pdf_converter_v2.py
backend/core/: archive.py  config.py  file_utils.py  pdf_converter.py  task_runner.py  yaml_utils.py
config/: analysis_rules.yaml
data/STV/: 2024 Financial Highlights.md  A View from the STV Executive.md  Chairman's Statement.md  Climate-related Financial Disclosures Report.md  Contents.md  Corporate Information.md  Directors' Report.md  ESG Report - Community.md  ESG Report.md  Finance Review.md  Governance Committee Reports.md  Key Financial Highlights.md  Non-financial and Sustainability Information Statement.md  Notes to the Financial Statements.md  Our Business Model.md  Remuneration Report.md  Risk Management.md  Streamlined Energy and Carbon Reporting (SECR).md  Sustainability.md  The STV Investor Proposition.md  stv_agent_ratios.md  (+2 more)
frontend/: REFACTORING_SUMMARY.md  index.html  package-lock.json  package.json
(+147 files in other folders)
